# chapter6-completed/product-catalog-service/src/main/java/com/acmepetsupplies/controller/ProductsApi.java
@@ -1,5 +1,5 @@
 /**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (6.2.1).
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (6.6.0).
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
@@ -8,14 +8,17 @@ package com.acmepetsupplies.controller;
 import com.acmepetsupplies.model.Error;
 import com.acmepetsupplies.model.Product;
 import java.util.UUID;
+import io.swagger.v3.oas.annotations.ExternalDocumentation;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.Parameters;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -31,7 +34,7 @@ import java.util.Map;
 import java.util.Optional;
 import javax.annotation.Generated;
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-12-31T13:20:55.039973Z[Europe/London]")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-07-19T06:47:55.870725+01:00[Europe/London]")
 @Validated
 @Tag(name = "Products", description = "A product is an item for sale on the store.")
 public interface ProductsApi {
@@ -56,6 +59,7 @@ public interface ProductsApi {
     @Operation(
         operationId = "viewProduct",
         summary = "View a product's details",
+        description = "View a product's details.",
         tags = { "Products" },
         responses = {
             @ApiResponse(responseCode = "200", description = "OK", content = {
@@ -90,12 +94,12 @@ public interface ProductsApi {
         produces = { "application/json" }
     )
     default ResponseEntity<Product> viewProduct(
-        @Parameter(name = "id", description = "Product identifier", required = true) @PathVariable("id") UUID id
+        @Parameter(name = "id", description = "Product identifier", required = true, in = ParameterIn.PATH) @PathVariable("id") UUID id
     ) {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "{ \"keywords\" : [ \"keywords\", \"keywords\", \"keywords\", \"keywords\", \"keywords\" ], \"price\" : 100, \"name\" : \"Acme Uber Dog Rope Toy\", \"description\" : \"Acme Uber Dog Rope Toy provides hours of fun for your dog. Great for bouncing, throwing and catching.\", \"id\" : \"dcd53ddb-8104-4e48-8cc0-5df1088c6113\" }";
+                    String exampleString = "{ \"keywords\" : [ \"keywords\", \"keywords\", \"keywords\", \"keywords\", \"keywords\" ], \"price\" : 100, \"numberOfReviews\" : 10, \"name\" : \"Acme Uber Dog Rope Toy\", \"description\" : \"Acme Uber Dog Rope Toy provides hours of fun for your dog. Great for bouncing, throwing and catching.\", \"id\" : \"dcd53ddb-8104-4e48-8cc0-5df1088c6113\", \"reviewRating\" : 5 }";
                     ApiUtil.setExampleResponse(request, "application/json", exampleString);
                     break;
                 }
